--- a/FirstApp/AndroidManifest.xml
+++ b/FirstApp/AndroidManifest.xml
@@ -20,6 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+		<activity
+            android:label="@string/second_activity"
+            android:name=".Second_Activity" 
+			android:parentActivityName="com.mycompany.firstapp.First_App_Activity" >
+            <meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="com.mycompany.firstapp.First_App_Activity"
+			/>
+        </activity>
+ </application>
 
 </manifest>
