--- a/FirstApp/AndroidManifest.xml
+++ b/FirstApp/AndroidManifest.xml
@@ -29,6 +29,15 @@
 				android:value="com.mycompany.firstapp.First_App_Activity"
 			/>
         </activity>
+		<activity
+            android:label="@string/third_activity"
+            android:name=".Third_Activity" 
+			android:parentActivityName="com.mycompany.firstapp.First_App_Activity" >
+            <meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="com.mycompany.firstapp.First_App_Activity"
+			/>
+        </activity>
  </application>
 
 </manifest>
