Added a Log_View Activity for storing up events that have taken place.   This is basically a big TextView that prints to itself what comes from the Log_Data which is static.

--- a/FirstApp/AndroidManifest.xml
+++ b/FirstApp/AndroidManifest.xml
@@ -50,6 +50,15 @@
 			/>
         </activity>
 		
+		<activity
+			android:label="log_viewer"
+			android:name=".Log_Viewer"
+			android:parentActivityName="com.mycompany.firstapp.First_App_Activity">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="com.mycompany.firstapp.First_App_Activity"
+			/>
+		</activity>
 </application>
 
 </manifest>
