--- a/FirstApp/AndroidManifest.xml
+++ b/FirstApp/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="11" />
 
     <application
+        android:debuggable="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
