--- a/FirstApp/AndroidManifest.xml
+++ b/FirstApp/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:versionName="1.5" >
 
     <uses-sdk 
-        android:minSdkVersion="8" 
-        android:targetSdkVersion="11" />
+        android:minSdkVersion="14"
+        android:targetSdkVersion="14" />
 
     <application
         android:debuggable="true"
@@ -20,6 +20,11 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:label="Audio_Activity"
+            android:name=".Audio_Activity"
+            android:parentActivityName="com.mycompany.firstapp.First_App_Activity" >
         </activity>
         <activity
             android:label="Draw_Activity"
